icons home screen

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+
+    <meta name="description" content="todo." />
+    <link rel="canonical" href="https://todo.spitzer.com.br/" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="TODO - todo" />
+    <meta property="og:description" content="TO do." />
+    <meta property="og:url" content="https://todo.spitzer.com.br/" />
+    <meta property="og:image" content="">
+    <meta property="og:site_name" content="Spitzer" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:description" content="to do feito pela spitzer." />
+    <meta name="twitter:title" content="TODO to do" />
+
+    <!-- Add to home screen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Spitzer - TODO">
+
+    <link rel="apple-touch-icon"
+      href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-touch-icon-152x152.png">
+    <link rel="mask-icon" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/safari-pinned-tab.svg"
+      color="#4DBA87">
+    <!-- Add to home screen for Windows -->
+    <!-- <meta name="msapplication-TileImage"
+      content="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/msapplication-icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#000000"> -->
+    
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Todo-Spitzer</title>
     <meta name="description" content="A todo application built with Vuetify">
